feat: State tracing for balance reconciliation  (#383)
This PR introduces the following endpoints:

- `/experimental/blocks/{blockId}/traces/operations?actions=false`
-  `/experimental/blocks/head/traces/operations?actions=false`
- `/experimental/blocks/{blockId}/traces`
- `/experimental/blocks/head/traces`
